<resources>
    <!--  put all title strings here  -->
    <string name="app_name">Tujupäevik</string>
    <string name="mainTitle">TUJU</string>
    <string name="mainTitleLanding">Tujupäevik</string>
    <string name="mainTitle2">päevik</string>
    <string name="moodTitle">Mis tunne on?</string>
    <string name="feelingsTitle">Miks ma nii tunnen?</string>
    <string name="tempoTitle">Mis tempoga ma sõidan?</string>
    <string name="fuelTitle">Kui palju energiat mul on?</string>
    <string name="resultsTitle">Kuidas mul läinud on?</string>

    <string name="submitBtnText">Kinnita</string>
    <string name="homeBtnText">Avalehele</string>
    <string name="landingMoodBtnText">Alusta</string>
    <string name="landingResBtnText">Tulemused</string>
    <string name="angryMoodBtnText">Vihane</string>
    <string name="anxiousMoodBtnText">Ärevil</string>
    <string name="excitedMoodBtnText">Elevil</string>
    <string name="happyMoodBtnText">Rõõmus</string>
    <string name="sadMoodBtnText">Kurb</string>
    <string name="scaredMoodBtnText">Hirmul</string>
    <string name="calmMoodBtnText">Rahulik</string>
    <string name="restedMoodBtnText">Puhanud</string>
    <string name="moodsBtnText">Tujud</string>
    <string name="temposBtnText">Tempod</string>

    <string name="accomplishment">Saavutus</string>
    <string name="withFriends">Koos sõpradega</string>
    <string name="iMoved">Liikusin</string>
    <string name="gotFeedback">Sain tagasisidet</string>
    <string name="wellRested">Puhkasin hästi</string>
    <string name="finishedSomething">Sain tehtud</string>
    <string name="confident">Olen enesekindel</string>
    <string name="fighting">Tüli</string>
    <string name="lonely">Olen üksi</string>
    <string name="badWeather">Halb ilm</string>
    <string name="bullied">Mind kiusati</string>
    <string name="insulted">Öeldi halvasti</string>
    <string name="badDream">Halb uni</string>
    <string name="tired">Väsimus</string>
    <string name="myInput">Kirjutan ise, miks</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="write_why">Kirjutan ise, miks</string>
    <string name="text_tempo_statistics">Tempode statistika</string>
    <string name="text_mood_statistics">Tujude statistika</string>
    <string name="homePageBtnText">Avalehele</string>
    <string name="statisticsBtnText">Statistika</string>
</resources>
