<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".FeelingsPageActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:fontFamily="@font/montserrat_bold"
        android:maxWidth="300dp"
        android:text="@string/feelingsTitle"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/button11"
        android:layout_width="115dp"
        android:layout_height="32dp"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="410dp"
        android:background="@drawable/button"
        android:fontFamily="@font/montserrat"
        android:onClick="setMoodState"
        android:tag="@string/bullied"
        android:text="@string/bullied"
        android:textColor="@color/colorBtnText"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="410dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/button"
        android:fontFamily="@font/montserrat"
        android:onClick="setMoodState"
        android:tag="@string/fighting"
        android:text="@string/fighting"
        android:textColor="@color/colorBtnText"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/button13"
        app:layout_constraintStart_toEndOf="@+id/button11"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="468dp"
        android:background="@drawable/button"
        android:fontFamily="@font/montserrat"
        android:onClick="setMoodState"
        android:tag="@string/badWeather"
        android:text="@string/badWeather"
        android:textColor="@color/colorBtnText"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="75dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="19dp"
        android:layout_marginRight="19dp"
        android:background="@drawable/button"
        android:fontFamily="@font/montserrat"
        android:onClick="setMoodState"
        android:tag="@string/imoved"
        android:text="@string/imoved"
        android:textColor="@color/colorBtnText"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/button7"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button13"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="410dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:background="@drawable/button"
        android:fontFamily="@font/montserrat"
        android:onClick="setMoodState"
        android:tag="@string/badDream"
        android:text="@string/badDream"
        android:textColor="@color/colorBtnText"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="95dp"
        android:layout_height="32dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:background="@drawable/button"
        android:fontFamily="@font/montserrat"
        android:onClick="setMoodState"
        android:tag="@string/lonely"
        android:text="@string/lonely"
        android:textColor="@color/colorBtnText"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="150dp"
        android:layout_height="32dp"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="348dp"
        android:background="@drawable/button"
        android:fontFamily="@font/montserrat"
        android:onClick="setMoodState"
        android:tag="@string/finishedSomething"
        android:text="@string/finishedSomething"
        android:textColor="@color/colorBtnText"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="157dp"
        android:layout_height="32dp"
        android:layout_marginTop="228dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:background="@drawable/button"
        android:fontFamily="@font/montserrat"
        android:onClick="setMoodState"
        android:tag="@string/gotFeedback"
        android:text="@string/gotFeedback"
        android:textColor="@color/colorBtnText"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="175dp"
        android:layout_height="32dp"
        android:layout_marginTop="288dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:background="@drawable/button"
        android:fontFamily="@font/montserrat"
        android:onClick="setMoodState"
        android:tag="@string/confident"
        android:text="@string/confident"
        android:textColor="@color/colorBtnText"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="90dp"
        android:layout_height="32dp"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="172dp"
        android:background="@drawable/button"
        android:fontFamily="@font/montserrat"
        android:onClick="setMoodState"
        android:tag="@string/accomplishment"
        android:text="@string/accomplishment"
        android:textColor="@color/colorBtnText"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="160dp"
        android:layout_height="32dp"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="288dp"
        android:background="@drawable/button"
        android:fontFamily="@font/montserrat"
        android:onClick="setMoodState"
        android:tag="@string/withFriends"
        android:text="@string/withFriends"
        android:textColor="@color/colorBtnText"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="141dp"
        android:layout_height="32dp"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="228dp"
        android:background="@drawable/button"
        android:fontFamily="@font/montserrat"
        android:onClick="setMoodState"
        android:tag="@string/wellRested"
        android:text="@string/wellRested"
        android:textColor="@color/colorBtnText"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button14"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="468dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:background="@drawable/button"
        android:fontFamily="@font/montserrat"
        android:onClick="setMoodState"
        android:tag="@string/tired"
        android:text="@string/tired"
        android:textColor="@color/colorBtnText"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button12"
        android:layout_width="130dp"
        android:layout_height="32dp"
        android:layout_marginTop="348dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:background="@drawable/button"
        android:fontFamily="@font/montserrat"
        android:onClick="setMoodState"
        android:tag="@string/insulted"
        android:text="@string/insulted"
        android:textColor="@color/colorBtnText"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="312dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="564dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Kirjutan ise, et miks..."
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>