<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MoodPageActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="114dp"
        android:layout_marginLeft="114dp"
        android:layout_marginTop="78dp"
        android:layout_marginEnd="115dp"
        android:layout_marginRight="115dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/moodTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/moodSelect"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="66dp"
        android:background="@drawable/button"
        android:fontFamily="@font/montserrat"
        android:onClick="onMoodSelect"
        android:tag="angry"
        android:text="@string/angryMoodBtnText"
        android:textColor="@color/colorBtnText"

        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/moodSelect2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/moodSelect2"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="66dp"
        android:background="@drawable/button"
        android:fontFamily="@font/montserrat"
        android:onClick="onMoodSelect"
        android:tag="anxious"
        android:text="@string/anxiousMoodBtnText"
        android:textColor="@color/colorBtnText"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/moodSelect5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moodSelect" />

    <Button
        android:id="@+id/moodSelect3"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginBottom="66dp"
        android:background="@drawable/button"
        android:fontFamily="@font/montserrat"
        android:onClick="onMoodSelect"
        android:tag="excited"
        android:text="@string/excitedMoodBtnText"
        android:textColor="@color/colorBtnText"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/moodSelect4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/moodSelect4"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginBottom="66dp"
        android:background="@drawable/button"
        android:fontFamily="@font/montserrat"
        android:onClick="onMoodSelect"
        android:tag="happy"
        android:text="@string/happyMoodBtnText"
        android:textColor="@color/colorBtnText"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/moodSelect6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moodSelect3" />

    <Button
        android:id="@+id/moodSelect5"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="66dp"
        android:background="@drawable/button"
        android:fontFamily="@font/montserrat"
        android:onClick="onMoodSelect"
        android:tag="sad"
        android:text="@string/sadMoodBtnText"
        android:textColor="@color/colorBtnText"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/moodSelect8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moodSelect2" />

    <Button
        android:id="@+id/moodSelect6"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginBottom="66dp"
        android:background="@drawable/button"
        android:fontFamily="@font/montserrat"
        android:onClick="onMoodSelect"
        android:tag="calm"
        android:text="@string/calmMoodBtnText"
        android:textColor="@color/colorBtnText"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/moodSelect7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moodSelect4" />

    <Button
        android:id="@+id/moodSelect7"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/button"
        android:fontFamily="@font/montserrat"
        android:onClick="onMoodSelect"
        android:tag="rested"
        android:text="@string/restedMoodBtnText"
        android:textColor="@color/colorBtnText"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moodSelect6" />

    <Button
        android:id="@+id/moodSelect8"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="66dp"
        android:background="@drawable/button"
        android:fontFamily="@font/montserrat"
        android:onClick="onMoodSelect"
        android:tag="scared"
        android:text="@string/scaredMoodBtnText"
        android:textColor="@color/colorBtnText"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moodSelect5" />

</androidx.constraintlayout.widget.ConstraintLayout>