<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">


    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/montserrat_bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorPrimary"
        android:maxWidth="300dp"
        android:textSize="36sp"
        android:gravity="center_horizontal"
        android:text="@string/text_tempo_statistics"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/MainMenuBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homePageBtnText"
        android:textColor="@color/colorBtnText"
        android:textSize="24sp"
        android:background="@drawable/button"
        android:fontFamily="@font/montserrat"
        android:onClick="openHomePage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.932" />

    <Button
        android:id="@+id/StatisticsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statisticsBtnText"
        android:textColor="@color/colorBtnText"
        android:textSize="24sp"
        android:background="@drawable/button"
        android:fontFamily="@font/montserrat"
        android:onClick="openResultsPage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.937"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.933" />


</androidx.constraintlayout.widget.ConstraintLayout>